--- a/Exploration_1_rock_scissor_paper.ipynb
+++ b/Exploration_1_rock_scissor_paper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "aquatic-bradford",
+   "id": "balanced-judge",
    "metadata": {},
    "source": [
     "# Image classification (Rock, Scissor, Paper)"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "auburn-genesis",
+   "id": "difficult-berlin",
    "metadata": {},
    "source": [
     "## 1. 데이터 불러오기\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "successful-kidney",
+   "id": "thousand-freeze",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "authorized-parent",
+   "id": "voluntary-pennsylvania",
    "metadata": {},
    "source": [
     "### 1-1. 가위바위보 이미지 크기 변환\n"
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "structural-married",
+   "id": "minute-certification",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "understood-explosion",
+   "id": "australian-foundation",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "monthly-shock",
+   "id": "widespread-defendant",
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "western-option",
+   "id": "refined-ethernet",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incident-configuration",
+   "id": "everyday-temple",
    "metadata": {},
    "source": [
     " "
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "worth-outside",
+   "id": "measured-discovery",
    "metadata": {},
    "source": [
     "## 2. 데이터 전처리\n",
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "adapted-slave",
+   "id": "municipal-harvey",
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "designed-story",
+   "id": "social-pricing",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "municipal-antibody",
+   "id": "historical-warrant",
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "persistent-tournament",
+   "id": "figured-range",
    "metadata": {},
    "source": [
     "## 3. 딥러닝 네트워크 설계"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "floral-breeding",
+   "id": "visible-karaoke",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "handled-bacon",
+   "id": "needed-buyer",
    "metadata": {},
    "source": [
     " "
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coral-murray",
+   "id": "moving-treaty",
    "metadata": {},
    "source": [
     "## 4. 딥러닝 네트워크 학습"
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "circular-container",
+   "id": "editorial-franklin",
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dried-smoke",
+   "id": "compatible-sixth",
    "metadata": {},
    "source": [
     "## 5. 모델 테스트"
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mobile-monroe",
+   "id": "persistent-slave",
    "metadata": {},
    "source": [
     "### 5-1. 테스트용 데이터 불러오기"
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fewer-norwegian",
+   "id": "overhead-survivor",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fifteen-centre",
+   "id": "attempted-somerset",
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +529,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "thirty-plaza",
+   "id": "ordinary-publisher",
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controversial-smell",
+   "id": "unknown-branch",
    "metadata": {},
    "source": [
     "### 5-2. 테스트용 데이터로 성능 확인하기"
@@ -570,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "pleased-package",
+   "id": "dimensional-bidder",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-butterfly",
+   "id": "introductory-release",
    "metadata": {},
    "source": [
     "## 6. 더 좋은 네트워크 만들기"
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "nervous-delaware",
+   "id": "worthy-palmer",
    "metadata": {},
    "source": [
     "### 6-1. 하이퍼 파라미터 바꾸기\n",
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "frequent-amplifier",
+   "id": "brazilian-mailman",
    "metadata": {},
    "outputs": [
     {
@@ -775,13 +775,7 @@
       "10/10 [==============================] - 0s 4ms/step - loss: 5.7271e-05 - accuracy: 1.0000\n",
       "Epoch 67/100\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 5.2663e-05 - accuracy: 1.0000\n",
-      "Epoch 68/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 68/100\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 4.7295e-05 - accuracy: 1.0000\n",
       "Epoch 69/100\n",
       "10/10 [==============================] - 0s 4ms/step - loss: 4.3737e-05 - accuracy: 1.0000\n",
@@ -889,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "blocked-conspiracy",
+   "id": "sized-neighborhood",
    "metadata": {},
    "source": [
     "### 6-2. train과 test data 바꿔보기\n",
@@ -899,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "light-fleet",
+   "id": "assisted-flexibility",
    "metadata": {},
    "outputs": [
     {
@@ -1176,12 +1170,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "orange-carry",
+   "cell_type": "markdown",
+   "id": "temporal-lewis",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 결론\n",
+    "* 정확도가 높지 않다.\n",
+    "* 원인으로 크게 두 가지가 있다.\n",
+    "  1. train dataset과 test dataset의 차이가 있는 것 같다. 두 dataset을 적절히 섞고 다시 학습하면 정확도가 오를 것으로 예상된다.\n",
+    "  2. 모델을 잘 모른다.추측: 클래스(가위 바위 보)를 늘려야 하지 않을까 싶다. ex) 배경 등 소거가 가능하게 하는 클래스를 따로 만들어서 모델이 좀 더 판단하기 쉽게 할 수 있다면 좋을 것 같다"
+   ]
   }
  ],
  "metadata": {
